--- a/app/index.html
+++ b/app/index.html
@@ -37,8 +37,9 @@
     <br>
 	
 	<div id="mensagemView"></div>
-    <div id="negociacoesView"></div>
+	<div id="negociacoesView"></div>
 	
+	<script src="lib/jquery.min.js"></script>
 	<script src="js/models/Negociacao.js"></script>
 	<script src="js/models/Negociacoes.js"></script>
 	<script src="js/controllers/NegociacaoController.js"></script>
