Utilizando requisição assíncrona com async/await

--- a/app/index.html
+++ b/app/index.html
@@ -39,7 +39,8 @@
 	
 	<div id="mensagemView"></div>
 	<div id="negociacoesView"></div>
-	
+		
+	<script src="./js/helpers/sss.js"></script>
 	<script src="lib/jquery.min.js"></script>
 	<script src="lib/system.js"></script>
 	<script>
